--- a/main.html
+++ b/main.html
@@ -14,51 +14,28 @@
  
 .ani{font-family:tahoma;font-style:italic;font-size:20;text-align:center;}
  
-font{font-family:georgia;color:blue;font-size:20}
+font{font-family:georgia;color:red;font-size:20}
  
 ul{list-style-type:circle}
- 
-</style>
- 
-</head>
- 
-<body bgcolor="gold" font-color="red">
- 
+ </style>
+ </head>
+ <body bgcolor="gold"> 
+ <marquee behavior="scroll" direction="left"><img src="vit.png" width="1000" height="250" alt="Natural" /></marquee>
 <ol style="list-style-type:lower-alpha">
- 
-<b>A.events</b><br><br><br>
- 
-<li>Technical events
- 
-<li>Non Technical
- 
-<li>Sports
- 
-<li>other activities
- 
-</ol>
- 
-
- 
-
-
- 
-<br>
- 
-<br>
- 
-<br>
- 
+<b>A.events</b><br>
+ <li>Technical events</li>
+ <li>Non Technical</li>
+ <li>Sports</li>
+ <li>other activities</li>
+ </ol>
 <font>
  <h2>List of events offered</h2>
 <a href="http://vit.ac.in/campus/sports">Visit our sports list</a>
- 
-<ul>
- 
-<a href="register.html">IEEE-PCS</a></br>
- 
-<a href="register1.html">HEALTH CLUB</a></br>
-<a href="register2.html">PRO SHOWS</a></br>
+ <ul>
+ <a href="db.html">IEEE-PCS</a></br>
+ <a href="register4.html">HEALTH CLUB</a></br>
+<a href="next.html">PRO SHOWS</a></br>
+<a href="db.html">admin</a></br>
  
 </ul>
  
