--- a/register4.html
+++ b/register4.html
@@ -22,6 +22,32 @@ tr:nth-child(even) {
 }
 </style>
 </head>
+<body background="3.jpg">
+
+
+<html>
+
+
+
+<head>
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+</head>
 <body background="1.jpg">
 
 <table>
@@ -29,34 +55,43 @@ tr:nth-child(even) {
     <th>event name</th>
     <th>amount</th>
     <th>location</th>
-
+     <th>option</th>
   </tr>
   <tr>
     <td>PLACE An order</td>
     <td>1000</td>
     <td>TT</td>
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
 
   </tr>
   <tr>
     <td>bazinga</td>
     <td>500</td>
     <td>SJT</td>
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
 
   </tr>
   <tr>
     <td>seminar</td>
     <td>650</td>
     <td>MB</td>
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
 
   </tr>
   <tr>
     <td>debate</td>
     <td>1500</td>
     <td>UK</td>
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
 
   </tr>
   
 </table>
+
 
 </body>
 </html>
