--- a/admin2.html
+++ b/admin2.html
@@ -29,31 +29,35 @@ tr:nth-child(even) {
     <th>event name</th>
     <th>amount</th>
     <th>location</th>
-
+<th>option</th>
   </tr>
   <tr>
     <td>PLACE An order</td>
     <td>1000</td>
     <td>TT</td>
-
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
   </tr>
   <tr>
     <td>bazinga</td>
     <td>500</td>
     <td>SJT</td>
-
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
   </tr>
   <tr>
     <td>seminar</td>
     <td>650</td>
     <td>MB</td>
-
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
   </tr>
   <tr>
     <td>debate</td>
     <td>1500</td>
     <td>UK</td>
-
+<td><a href="delete.html">delete</a></td>
+<td><a href="edit.html">edit</a></td>
   </tr>
   
 </table>
